# Moving_Object_Estimator

./: .gitmodules  AIRIO.rviz  Dockerfile  frames_2025-09-17_12.02.36.gv  mos.rviz
airio_imu_odometry/airio_imu_odometry/: airimu_wrapper.py  airio_node.py  airio_node_single_thread.py  airio_wrapper.py
airio_imu_odometry/config/airimu/: codenet.conf
airio_imu_odometry/launch/: airio_node.launch.py
moving_object_estimator/: CMakeLists.txt  package.xml
moving_object_estimator/include/moving_object_estimator/: dynamic_obstacle_detector.hpp  map_manager.hpp  mos_sync_node.hpp  sync_node.hpp
moving_object_estimator/src/: dynamic_obstacle_detector.cpp  main.cpp  map_manager.cpp  mos_sync_node.cpp  sync_node.cpp
object_detector/: CMakeLists.txt
object_detector/config/: params.yaml
object_detector/src/: scan_processor_node.cpp
